--- a/Resource Monitor/Resource Monitor.csproj
+++ b/Resource Monitor/Resource Monitor.csproj
@@ -1,19 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\PropertyChanged.Fody.4.1.0\build\PropertyChanged.Fody.props" Condition="Exists('..\packages\PropertyChanged.Fody.4.1.0\build\PropertyChanged.Fody.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{13441160-6C30-4DAE-BA27-606843714F86}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Monitor</RootNamespace>
-    <AssemblyName>Monitor</AssemblyName>
+    <RootNamespace>ResourceMonitor</RootNamespace>
+    <AssemblyName>Resource Monitor</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,9 +52,31 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HidSharp, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HidSharp.2.1.0\lib\net35\HidSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="LibreHardwareMonitorLib, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibreHardwareMonitorLib.0.9.3-pre256\lib\net472\LibreHardwareMonitorLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PropertyChanged, Version=4.1.0.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
+      <HintPath>..\packages\PropertyChanged.Fody.4.1.0\lib\net40\PropertyChanged.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.CodeDom, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.CodeDom.7.0.0\lib\net462\System.CodeDom.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,68 +95,52 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Models\Enums\Resource.cs" />
-    <Compile Include="Models\Helpers\DataRateConverter.cs" />
-    <Compile Include="Models\Resources\Resources.cs" />
-    <Compile Include="ViewModels\CPU\CPULoadViewModel.cs" />
-    <Compile Include="ViewModels\CPU\CPUTemperatureViewModel.cs" />
-    <Compile Include="ViewModels\CPU\CPUViewModel.cs" />
-    <Compile Include="ViewModels\Disk\DiskReadThroughputViewModel.cs" />
-    <Compile Include="ViewModels\Disk\DiskViewModel.cs" />
-    <Compile Include="ViewModels\Disk\DiskWriteThroughputViewModel.cs" />
-    <Compile Include="ViewModels\GPU\GPULoadViewModel.cs" />
-    <Compile Include="ViewModels\GPU\GPUTemperatureViewModel.cs" />
-    <Compile Include="ViewModels\GPU\GPUViewModel.cs" />
-    <Compile Include="ViewModels\Main\MainViewModel.cs" />
-    <Compile Include="ViewModels\Network\NetworkDownloadThroughputViewModel.cs" />
-    <Compile Include="ViewModels\Network\NetworkUploadThroughputViewModel.cs" />
-    <Compile Include="ViewModels\Network\NetworkViewModel.cs" />
-    <Compile Include="ViewModels\RAM\RAMLoadViewModel.cs" />
-    <Compile Include="ViewModels\RAM\RAMViewModel.cs" />
-    <Compile Include="Views\CPU\CPU.xaml.cs">
+    <Compile Include="Helpers\IResource.cs" />
+    <Compile Include="Helpers\ThroughputConverter.cs" />
+    <Compile Include="Models\HardwareManager.cs" />
+    <Compile Include="Models\ResourceManager.cs" />
+    <Compile Include="Models\SettingsManager.cs" />
+    <Compile Include="SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\CPUViewModel.cs" />
+    <Compile Include="ViewModels\DiskViewModel.cs" />
+    <Compile Include="ViewModels\GeneralViewModel.cs" />
+    <Compile Include="ViewModels\GPUViewModel.cs" />
+    <Compile Include="ViewModels\NetworkViewModel.cs" />
+    <Compile Include="ViewModels\RAMViewModel.cs" />
+    <Compile Include="Views\Resources\CPU.xaml.cs">
       <DependentUpon>CPU.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\CPU\CPULoad.xaml.cs">
-      <DependentUpon>CPULoad.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\CPU\CPUTemperature.xaml.cs">
-      <DependentUpon>CPUTemperature.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Disk\Disk.xaml.cs">
+    <Compile Include="Views\Resources\Disk.xaml.cs">
       <DependentUpon>Disk.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Disk\DiskReadThroughput.xaml.cs">
-      <DependentUpon>DiskReadThroughput.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Disk\DiskWriteThroughput.xaml.cs">
-      <DependentUpon>DiskWriteThroughput.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\GPU\GPU.xaml.cs">
+    <Compile Include="Views\Resources\GPU.xaml.cs">
       <DependentUpon>GPU.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\GPU\GPULoad.xaml.cs">
-      <DependentUpon>GPULoad.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\GPU\GPUTemperature.xaml.cs">
-      <DependentUpon>GPUTemperature.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Main\Main.xaml.cs">
-      <DependentUpon>Main.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Network\Network.xaml.cs">
+    <Compile Include="Views\Resources\Network.xaml.cs">
       <DependentUpon>Network.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Network\NetworkDownloadThroughput.xaml.cs">
-      <DependentUpon>NetworkDownloadThroughput.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Network\NetworkUploadThroughput.xaml.cs">
-      <DependentUpon>NetworkUploadThroughput.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\RAM\RAM.xaml.cs">
+    <Compile Include="Views\Resources\RAM.xaml.cs">
       <DependentUpon>RAM.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\RAM\RAMLoad.xaml.cs">
-      <DependentUpon>RAMLoad.xaml</DependentUpon>
+    <Compile Include="Views\Settings\CPU.xaml.cs">
+      <DependentUpon>CPU.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Settings\Disk.xaml.cs">
+      <DependentUpon>Disk.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Settings\General.xaml.cs">
+      <DependentUpon>General.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Settings\GPU.xaml.cs">
+      <DependentUpon>GPU.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Settings\Network.xaml.cs">
+      <DependentUpon>Network.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Settings\RAM.xaml.cs">
+      <DependentUpon>RAM.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -130,63 +154,51 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\CPU\CPU.xaml">
+    <Page Include="SettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\CPU\CPULoad.xaml">
+    <Page Include="Views\Resources\CPU.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\CPU\CPUTemperature.xaml">
+    <Page Include="Views\Resources\Disk.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Disk\Disk.xaml">
+    <Page Include="Views\Resources\GPU.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Disk\DiskReadThroughput.xaml">
+    <Page Include="Views\Resources\Network.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Disk\DiskWriteThroughput.xaml">
+    <Page Include="Views\Resources\RAM.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GPU\GPU.xaml">
+    <Page Include="Views\Settings\CPU.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GPU\GPULoad.xaml">
+    <Page Include="Views\Settings\Disk.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GPU\GPUTemperature.xaml">
+    <Page Include="Views\Settings\General.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Main\Main.xaml">
+    <Page Include="Views\Settings\GPU.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Network\Network.xaml">
+    <Page Include="Views\Settings\Network.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Network\NetworkDownloadThroughput.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Network\NetworkUploadThroughput.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\RAM\RAM.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\RAM\RAMLoad.xaml">
+    <Page Include="Views\Settings\RAM.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -209,6 +221,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.manifest" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -217,6 +231,28 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Fody.6.6.4\build\Fody.targets" Condition="Exists('..\packages\Fody.6.6.4\build\Fody.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Fody.6.6.4\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.6.6.4\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\PropertyChanged.Fody.4.1.0\build\PropertyChanged.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PropertyChanged.Fody.4.1.0\build\PropertyChanged.Fody.props'))" />
+  </Target>
 </Project>
